--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -24,31 +24,38 @@
     align-items: center;
     /* justify-content: center; */
     width: 50%;
-    height: 80vh;
+    height: 70vh;
 }
 
 .contactRight {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
     width: 50%;
-    height: 80vh;
+    height: 70vh;
+}
+
+.contactFormTitle {
+    font-family: "Arial Black", sans-serif;
+    font-size: 30px;
+    width: 90%;
+    color: white;
 }
 
 .contactButtonContainer {
     display: flex;
     flex-direction: column;
     width: 80%;
-    height: 50%;
-    justify-content: space-between;
+    height: 50vh;
+    justify-content: space-around;
     align-items: center;
 }
 
 .contactResumeButton {
     background-color: white;
     color: #79bfeb;
-    width: 50%;
+    width: 60%;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border: solid 2px white;
@@ -83,7 +90,7 @@
 .contactGitButton {
     background-color: white;
     color: #79bfeb;
-    width: 50%;
+    width: 60%;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border: solid 2px white;
@@ -118,7 +125,7 @@
 .contactLinkButton {
     background-color: white;
     color: #79bfeb;
-    width: 50%;
+    width: 60%;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border: solid 2px white;
@@ -153,7 +160,7 @@
 .contactMailButton {
     background-color: white;
     color: #79bfeb;
-    width: 50%;
+    width: 60%;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border: solid 2px white;
@@ -178,7 +185,7 @@
 }
 
 .contactMailButton:hover :before{
-    content: "View LinkedIn";
+    content: "Mail";
 }
 
 .contactMailButton:focus {
