--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -192,3 +192,12 @@
     outline: none;
 }
 
+.nameBottom {
+    color: white;
+    font-family: "Arial Black", sans-serif;
+}
+
+.copyBottom {
+    color: rgb(230, 228, 228);
+    font-family: "Arial Black", sans-serif;
+}
