fixes resume button css

--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -52,6 +52,10 @@
     align-items: center;
 }
 
+.contactResumePdf {
+    width: 100%;
+}
+
 .contactResumeButton {
     background-color: white;
     color: #79bfeb;
