--- a/src/css/Triphikers.css
+++ b/src/css/Triphikers.css
@@ -3,13 +3,15 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: fit-content;
+    height: 100vh;
 }
 
 .tripHikersContext{
     max-width: 85em;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -23,14 +25,18 @@
 .tripHikersLeft {
     display: flex;
     flex-direction: column;
+    /* justify-content: space-around; */
     align-items: center;
-    width: 55%;
+    width: 50%;
+    height: 100vh;
 }
 
 .tripHikersRight {
-    width: 45%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    width: 50%;
+    height: 100vh;
 }
 
 .tripHikersTitle {
@@ -42,7 +48,7 @@
 
 .projectsP { 
     letter-spacing: 2px;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 300;
 }
 
@@ -61,6 +67,61 @@
     left: 0; 
     width: 100%; 
     height: 100%; 
+}
+
+.tripHikersButtonContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+.tripHikersButton {
+    background-color: #79bfeb;
+    color: white;
+    width: 30%;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border: solid 2px #79bfeb;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 12px;
+}
+
+.tripHikersButton:hover {
+    cursor: pointer;
+    background-color: white;
+    color: #79bfeb;
+    transition: transform .5s ease;
+    transform: scale(1.1);
+}
+
+.tripHikersButton:focus {
+    outline: none;
+}
+
+.tripHikersDemoLinks {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.tripHikersQA1 {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.tripHikersQA2 {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
 }
 
 /* .tripHikersContext{
