--- a/src/css/CovidNearUs.css
+++ b/src/css/CovidNearUs.css
@@ -2,6 +2,95 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.covidNearUsContext{
+    max-width: 85em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.covidNearUsAbout{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    width: 80%;
+}
+
+.covidNearUsLeft {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-around; */
+    align-items: center;
+    width: 50%;
+    height: 100vh;
+}
+
+.covidNearUsRight {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 50%;
+    height: 100vh;
+}
+
+.covidNearUsTitle {
+    font-family: "Arial Black", sans-serif;
+    font-size: 50px;
+    width: 100%;
+    color: #79bfeb;
+}
+
+.covidNearUsButtonContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+.covidNearUsButton {
+    background-color: #79bfeb;
+    color: white;
+    width: 30%;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border: solid 2px #79bfeb;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 12px;
+}
+
+.covidNearUsButton:hover {
+    cursor: pointer;
+    background-color: white;
+    color: #79bfeb;
+    transition: transform .5s ease;
+    transform: scale(1.1);
+}
+
+.covidNearUsButton:focus {
+    outline: none;
+}
+
+.covidNearUsDemoLinks {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+/* .covidNearUsContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100vw;
     height: fit-content;
 }
@@ -36,7 +125,7 @@
     border: solid 5px #1F3541;
     color: #1F3541;
     padding: 1.5em;
-}
+} */
 
 /* .covidNearUsRight:hover {
     transition: transform .5s ease;
