--- a/src/css/About.css
+++ b/src/css/About.css
@@ -181,7 +181,7 @@
         align-items: center;
         justify-content: space-between;
         width: 90vw;
-        height: fit-content;
+        height: 60vh;
         padding: 1em;
         margin-bottom: 1em;
     }
@@ -190,6 +190,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        height: fit-content;
     }
 
     .aboutMe {
@@ -204,6 +205,11 @@
         width: 90vw;
         height: fit-content;
         padding: 1em;
+    }
+
+    .aboutButton {
+        min-width: 25%;
+        min-height: 12vh;
     }
 
     .aboutButtonContainer {
