--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -22,7 +22,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
     width: 50%;
     height: 70vh;
 }
@@ -234,6 +233,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        height: fit-content;
         align-items: center;
         justify-content: center;
     }
